# serdes-cookbook

./: .gitignore  README.md  download_channels.py  pyproject.toml
sandbox/: ber_uncoded_pam.py  channel_tf.py
